--- a/RT_HW_Pymaceuticals/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/RT_HW_Pymaceuticals/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -4328,7 +4328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -4532,7 +4532,7 @@
        "9          Zoniferol       25  24  22  21  17  16  15  14  14  14"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4547,7 +4547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4562,7 +4562,7 @@
        "9          Zoniferol       25  24  22  21  17  16  15  14  14  14>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4572,7 +4572,8 @@
     "#mouse_count_df.drop([2,5,7,8,9,10])\n",
     "mouse_count_df=mouse_count_df.drop(mouse_count_df.index[[1,4,6,7,8]])\n",
     "#mouse_count_df.drop([9], inplace=True)\n",
-    "survived_mouse.unstack\n",
+    "survived_mouse_per=mouse_count_df\n",
+    "\n",
     "# Preview the Data Frame\n",
     "#survived_mouse_count=mouse_count_df.pivot(index=\"Timepoint\", columns=\"Drugs\")\n",
     "#survived_mouse_count"
